[package]
name = "rust_profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
nix = "0.26"
libc = "0.2"
procfs = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prettytable-rs = "^0.10"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "rust_profiler"
path = "src/main.rs"